PHOENIX-1071 Get the phoenix-spark integration tests running.
Uses the BaseHBaseManagedTimeIT framework now for creating the
test cluster and setup/teardown.

Tested with Java 7u75 i386 on Ubuntu, and 7u40 x64 on OS X.